	* Stubbed out webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the REBOOT command in webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the UPGRADE command in webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the NTP command in webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the IP command in webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the RESTART command in webhostd(8).
2015-12-12 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out a 'libwebhost' library in 'src/wh/'.
2015-12-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiPost' class in 'src/wh/whcgipost.cpp' and
	'src/wh/whcgipost.h'.
	* Added a 'WHCgiApplication' class in 'src/wh/whcgiapplication.cpp'
	and 'src/wh/whcgiapplication.h'.
	* Added a 'WHCgiPage' class in 'src/wh/whcgipage.cpp' and
	'src/wh/whcgipage.h'.
	* Added a 'cgitest' application in 'src/tests/'.
2015-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHSettings' class in 'src/wh/whsettings.cpp' and
	'src/wh/whsettings.h'.
2015-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Added 'WHCgiPost::sendIpCommand()', 'WHCgiPost::sendNtpCommand()',
	'WHCgiPost::sendRebootCommand()', 'WHCgiPost::sendRestartCommand()' and
	'WHCgiPost::sendUpgradeCommand()' methods in 'src/wh/whcgipost.cpp'
	and 'src'wh/whcgipost.h'.
2015-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Added 'whcgipage.h', 'whcgipost.h' and 'whsettings.h' to the
	'include_HEADERS' list in 'src/wh/Makefile.am'.
	* Added a 'WHCgiPage::addScript()' method in 'src/wh/whcgipage.cpp'
	and 'src/wh/whcgipage.h'.
	* Added 'WHCgiPost::ipAddress()', 'WHCgiPost::ipNetmask()',
	'WHCgiPost::ipGateway()', 'WHCgiPost::dnsAddress()' and
	'WHCgiPost::ntpAddress()' methods in 'src/wh/whcgipost.cpp' and
	'src/wh/whcgipost.h'.
2015-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Implemented menu navigation.