@@ -1,13 +1,22 @@
+*.cgi
 *.deps
+*.la
+.libs
+*.lo
 *.o
+*.pc
 *.spec
 aclocal.m4
 autom4te.cache/
+config.guess
 config.log
 config.status
+config.sub
 configure
 depcomp
 install-sh
+libtool
+ltmain.sh
 Makefile
 Makefile.in
 missing
