@@ -41,3 +41,7 @@
 	'src/wh/whcgipost.h'.
 2015-12-13 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented menu navigation.
+2015-12-20 Fred Gleason <fredg@paravelsystems.com>
+	* Modified the 'WHCgiApplication::renderData()' method so that
+	posts with an unknown command ID are handled by the default
+	page handler (id=0) in 'src/wh/whcgiapplication.cpp'.
